Implement swagger doc for User endpoint
